--- a/css/index.css
+++ b/css/index.css
@@ -134,9 +134,17 @@ header {
       header .header-top button:hover {
         background: #ea703a; }
   header .header-bottom {
+    position: relative;
     margin-top: 23px; }
-    header .header-bottom a {
-      float: left; }
+    header .header-bottom:after {
+      content: '';
+      display: block;
+      clear: both; }
+    header .header-bottom .heaer-logo {
+      display: inline-block;
+      position: absolute;
+      left: 5px;
+      top: -32px; }
     header .header-bottom nav {
       float: right;
       padding-top: 13px; }
@@ -260,7 +268,7 @@ footer {
     font-weight: normal; }
     .section-title h3 p {
       font-size: 12px;
-      padding-top: 10px; }
+      padding-top: 8px; }
   .section-title > p {
     float: right;
     font-size: 12px;
