--- a/template/header.html
+++ b/template/header.html
@@ -21,11 +21,8 @@
     <button ng-click="goback($event)"><a>信息管理平台</a></button >
 </div>
 <div class="header-bottom">
-    <a href="">
-        <img src="img/logo.png" alt="">
-    </a>
-    <a href="" style="margin-left:14px;margin-top:10px;">
-        <img src="img/logo2.png" alt="">
+    <a ui-sref="home" class="heaer-logo">
+        <img src="img/logo.png" alt="" style="margin-left:24px;padding-bottom:20px">
     </a>
     <nav>
         <ul>
