--- a/template/collectionDetails.html
+++ b/template/collectionDetails.html
@@ -8,7 +8,7 @@
     </ul>
     <ul>
         <li ng-if="data.mipOpenCulturalrelicInfo.threeDimensionalCollection||data.mipOpenFossilInfo.threeDimensionalCollection">
-            <button><a href="">3D</a></button>
+            <button ng-click="open3D(data.mipOpenCulturalrelicInfo.threeDimensionalCollection||data.mipOpenFossilInfo.threeDimensionalCollection)"><a>3D</a></button>
         </li>
         <li ng-if="data.mipOpenCulturalrelicInfo.fVideo||data.mipOpenFossilInfo.fVideo">
             <button ng-click="goVideo()"><a>视频</a></button>
@@ -17,11 +17,12 @@
             <button><a>百科</a></button>
         </li>
         <li ng-if="data.mipOpenCulturalrelicInfo.fAudio||data.mipOpenFossilInfo.fAudio">
-            <button><a href="">音频</a></button>
+            <button><a href="" style="padding:0 5px;" ng-click="playAudio()">音频<s style="margin-left: 5px;" ng-class="{pplay:pplay}"></s></a></button>
         </li>
         <li style="padding-left:40px;">
             <i ng-class="{active:data.isCollected}" ng-click="addCollection($event)"></i><u ng-bind="'收藏('+(data.mipOpenCulturalrelicInfo.selectCounts||data.mipOpenFossilInfo.selectCounts+num2)+')'"></u>
         </li>
+        <audio style="visibility: hidden;display:inline-block" id="paudio" ng-if="data.mipOpenCulturalrelicInfo.fAudio||data.mipOpenFossilInfo.fAudio" ng-src="{{sce(data.mipOpenCulturalrelicInfo.fAudio)||sce(data.mipOpenFossilInfo.fAudio)}}" controls></audio>
     </ul>
     <div class="collection-details-img">
         <img width="640" height="426" ng-src="{{data.picture.thumb1}}" alt="{{data.mipOpenCulturalrelicInfo.name||data.mipOpenFossilInfo.name}}">
@@ -53,11 +54,11 @@
     <div class="collection-details-correlation">
         <p>本馆藏品</p>
         <ol>
-            <li style="margin-right:20px;" ng-class="{hasmore:hasmoreleft}" ng-click="reducePage('relations')"></li>
-            <li ng-class="{hasmore:hasmoreright}" ng-click="addPage('relations')"></li>
+            <li style="margin-right:20px;" ng-class="{hasmore:hasmoreleft1}" ng-click="reducePage('other')" style="cursor: pointer"></li>
+            <li ng-class="{hasmore:hasmoreright1}" ng-click="addPage('other')" style="cursor: pointer"></li>
         </ol>
         <ul>
-            <li ng-repeat="relation in correlation | limitTo:5">
+            <li ng-repeat="relation in corother | limitTo:5">
                 <a ui-sref="collectiondetails({type:other.mipOpenCulturalrelicInfo.collectionType?'Relic':'specimen'||other.mipOpenFossilInfo?'Relic':'specimen',id:relation.mipOpenCulturalrelicInfo.id||relation.mipOpenFossilInfo.id})" target="_blank">
                     <img ng-src="{{relation.picture.thumb3}}" width="191" height="129" alt="{{relation.mipOpenCulturalrelicInfo.name||relation.mipOpenFossilInfo.name}}">
                 </a>
@@ -68,11 +69,11 @@
     <div class="collection-details-correlation">
         <p>相关藏品</p>
         <ol>
-            <li style="margin-right:20px;" ng-class="{hasmore:hasmoreleft1}" ng-click="reducePage('other')"></li>
-            <li ng-class="{hasmore:hasmoreright1}" ng-click="addPage('other')"></li>
+            <li style="margin-right:20px;" ng-class="{hasmore:hasmoreleft}" ng-click="reducePage('relations')" style="cursor: pointer"></li>
+            <li ng-class="{hasmore:hasmoreright}" ng-click="addPage('relations')" style="cursor: pointer"></li>
         </ol>
         <ul>
-            <li ng-repeat="other in corother | limitTo:5">
+            <li ng-repeat="other in correlation | limitTo:5">
                 <a ui-sref="collectiondetails({type:other.mipOpenCulturalrelicInfo.collectionType?'Relic':'specimen'||other.mipOpenFossilInfo?'Relic':'specimen',id:other.mipOpenCulturalrelicInfo.id||other.mipOpenFossilInfo.id})" target="_blank">
                     <img ng-src="{{other.picture.thumb3}}" width="191" height="129" alt="{{other.mipOpenCulturalrelicInfo.name||other.mipOpenFossilInfo.name}}">
                 </a>
