--- a/template/display_details.html
+++ b/template/display_details.html
@@ -9,7 +9,7 @@
             <i>博物馆：</i>
             <span ng-bind="detailsData.musExhibition"></span>
         </h3>
-        <h3 style="margin-left:20px">
+        <h3 style="margin-left:20px" ng-if="detailsData.staTime">
             <i>时间：</i>
             <span ng-show="detailsData.staTime"><u ng-bind="detailsData.staTime"></u>--<u ng-bind="detailsData.overTime"></u></span><span ng-hide="detailsData.staTime">常设展览</span>
         </h3>
