--- a/css/collection.css
+++ b/css/collection.css
@@ -143,7 +143,7 @@ header {
     header .header-bottom .heaer-logo {
       display: inline-block;
       position: absolute;
-      left: 0px;
+      left: 5px;
       top: -32px; }
     header .header-bottom nav {
       float: right;
@@ -443,7 +443,7 @@ footer {
         width: 15px;
         height: 15px;
         background: url("../img/icon-heart.png") no-repeat -17px 0; }
-        #ul1 li div i.active, #ul1 li div i:hover, #ul2 li div i.active, #ul2 li div i:hover {
+        #ul1 li div i.active, #ul2 li div i.active {
           cursor: pointer;
           background-position: 0 0; }
       #ul1 li div u, #ul2 li div u {
@@ -483,7 +483,7 @@ footer {
         width: 15px;
         height: 15px;
         background: url("../img/icon-heart.png") no-repeat -17px 0; }
-        .collection-details > ul li i.active, .collection-details > ul li i:hover {
+        .collection-details > ul li i.active {
           cursor: pointer;
           background-position: 0 0; }
       .collection-details > ul li u {
